samples/_failures_safe/1761637107_6b3117_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b0d038fc.c: In function ‘matrix_multiply’:
./samples/SAFE/__tmp_b0d038fc.c:125:25: error: expected declaration or statement at end of input
  125 |                         return 0;
      |                         ^~~~~~
./samples/SAFE/__tmp_b0d038fc.c:125:25: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_b0d038fc.c:125:25: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_b0d038fc.c:125:25: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_b0d038fc.c:125:25: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_b0d038fc.c:125:25: error: expected declaration or statement at end of input
